tests/transpiler/x/scala/pure_global_fold.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/pure_global_fold.scala:4: error: not found: value k
    x + k
        ^
one error found
