tests/transpiler/x/scala/pure_global_fold.scala
// Generated by Mochi v0.10.31 on 2025-07-20 10:36:24 GMT+7
object Main {
  def inc(x: Int): Int = {
    x + k
  }

  def main(args: Array[String]): Unit = {
    val k: Int = 2
    println(inc(3))
  }
}
